@@ -4,6 +4,9 @@
 	  This only affects servers that have allow-notify: ip NOKEY and
 	  someone sends a TSIG signed notify from that ip.
 	- test package for that.
+	- Fix for reply to notify messages with ANCOUNT wrong. The ack
+	  to notify messages that passed the ACL, and had a SOA in the answer
+	  section of the query, included wrong RR counts in the header.
 
 8 Januari 2007: Wouter
 	- ipc_send_blocked will not lead to busy waiting on it, but will block
